# ExternalApplication_SDK

./: Dockerfile  readme.md  run.bat  run.sh
media/: build.sh
media/hello-world/: CMakeLists.txt
media/hello-world/src/: main.cpp
media/hello-wtt/: CMakeLists.txt
media/hello-wtt/USB/: hello-wtt.xml
media/hello-wtt/src/: main.cpp  main.h
media/sdl2-example/: CMakeLists.txt
media/sdl2-example/USB/: sdl2-example.xml
media/sdl2-example/src/: ColorManager.h  Food.cpp  Food.h  GameLogic.cpp  GameLogic.h  Snake.cpp  Snake.h  main.cpp  main.h
media/sdl2-example/src/gfx/: core.cpp  core.h  font.cpp  font.h  image.cpp  image.h  sound.cpp  sound.h
media/toolchain/: a53-toolchain.cmake
